added button that will link to the firebase.html where I am setting up the interaction with the database

--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
   </header>
 
   <main>
+
+    <!-- Add event button using Firebase - will need to update URL -->
+    <div class="btnEvent">
+      <input type="button" onclick="window.location.href='/firebase.html';" class="btn btn-warning btn-lg" value="Click To Add Event"/>
+    </div>
+
+    <!-- Page break gives space for add event button -->
+    <br></br>
+    
     <!-- TODO: Add option to translate the page? -->
     <div id="calendar" class="card my-3"></div>
   </main>
