added timezone api

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
     <div class="btnEvent">
       <input type="button" onclick="window.location.href='/firebase.html';" class="btn btn-warning btn-lg" value="Click To Add Event"/>
     </div>
+    <div class="timezone" id="timezone">
+
+      <h3>EST: 8:00PM</h3>
+    </div>
 
     <!-- Page break gives space for add event button -->
     <br></br>
@@ -59,6 +63,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- Our JavaScript file -->
   <script src="./assets/js/script.js"></script>
+  <script src="./Assets/js/timezone.js"></script>
 
 </body>
 
