--- a/index.html
+++ b/index.html
@@ -26,69 +26,54 @@
     </nav>
     <h1>Carrot</h1>
   </header>
-
   <main>
     <!-- TODO: Add option to translate the page? -->
-<<<<<<< HEAD
-    <div id="calendar" class="card my-3"></div>
-=======
-    <div id="calendar-container" class="container-fluid my-3">
-      <div id="calendar" class="card">
-        <!-- TODO: Add buttons to change month? Add option to change the view (monthly/weekly)?-->
-        <div id="calendar-header" class="card-header"></div>
-        <div id="calendar-events" class="card-body">
-          <table class="table table-striped-columns">
-            <thead id="week-day"></thead>
-            <tbody id="week-row">
-              <tr id="week-1"></tr>
-              <tr id="week-2"></tr>
-              <tr id="week-3"></tr>
-              <tr id="week-4"></tr>
-              <tr id="week-5"></tr>
-            </tbody>
-          </table>
-        </div>
+    <<<<<<< HEAD <div id="calendar" class="card my-3">
       </div>
-    </div>
-    <!-- TODO: Add a drop down to choose the time of the event -->
-
-    <div class="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
-        aria-haspopup="true" aria-expanded="false">
-        Time
-      </button>
-      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="#">Morning</a>
-        <a class="dropdown-item" href="#">Afternoon</a>
-        <a class="dropdown-item" href="#">Evening</a>
-      </div>
-    </div>
-    <input type="time" class="form-control" aria-label="Text input with dropdown button">
-
-
-
-
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" arial-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h2 class="modal-title" id="exampleModalLabel">December</h2>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <form>
-              <input type="text" class="form-control" placeholder="Some quick example."></input>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save</button>
+      =======
+      <div id="calendar-container" class="container-fluid my-3">
+        <div id="calendar" class="card">
+          <!-- TODO: Add buttons to change month? Add option to change the view (monthly/weekly)?-->
+          <div id="calendar-header" class="card-header"></div>
+          <div id="calendar-events" class="card-body">
+            <table class="table table-striped-columns">
+              <thead id="week-day"></thead>
+              <tbody id="week-row">
+                <tr id="week-1"></tr>
+                <tr id="week-2"></tr>
+                <tr id="week-3"></tr>
+                <tr id="week-4"></tr>
+                <tr id="week-5"></tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
-    </div>
+      <!-- TODO: Add a drop down to choose the time of the event -->
 
->>>>>>> c5c9831 (added time input)
+
+
+      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" arial-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h2 class="modal-title" id="exampleModalLabel">December</h2>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <form>
+                <input type="text" class="form-control" placeholder="Some quick example."></input>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      >>>>>>> c5c9831 (added time input)
   </main>
 
   <footer>
