resolved diverging branch, added timezone api

--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
   </header>
 
   <main>
+ HEAD
+=======
+
+    <!-- Add event button using Firebase - will need to update URL -->
+    <div class="btnEvent">
+      <input type="button" onclick="window.location.href='/firebase.html';" class="btn btn-warning btn-lg" value="Click To Add Event"/>
+    </div>
+    <div class="timezone" id="timezone">
+
+      <h3>EST: 8:00PM</h3>
+    </div>
+
+    <!-- Page break gives space for add event button -->
+    <br></br>
+    
     <!-- TODO: Add option to translate the page? -->
     <div id="calendar" class="card my-3"></div>
   </main>
@@ -53,6 +68,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- Our JavaScript file -->
   <script src="./assets/js/script.js"></script>
+  <script src="./Assets/js/timezone.js"></script>
 
 </body>
 
