--- a/index.html
+++ b/index.html
@@ -26,6 +26,24 @@
     </nav>
     <h1>Carrot</h1>
   </header>
+  <div class="time-form">
+    <div class="form-floating">
+      <input type="time" class="form-control time-input" id="time">
+      <label for="time">Time for the event</label>
+    </div>
+    <div class="form-floating">
+      <input type="text" class="form-control time-input" id="text">
+      <label for="text">Text</label>
+    </div>
+    <div class="input-group-append">
+      <button class="btn btn-outline-secondary" type="button">Button</button>
+    </div>
+    <!-- <label>
+      Time Event
+    </label>
+    <input type="time" id="time-input" class="form-control" aria-label="Text input with dropdown button"> -->
+  </div>
+
   <main>
     <!-- TODO: Add option to translate the page? -->
     <<<<<<< HEAD <div id="calendar" class="card my-3">
