--- a/index.html
+++ b/index.html
@@ -45,9 +45,6 @@
   </div>
 
   <main>
- HEAD
-=======
-
     <!-- Add event button using Firebase - will need to update URL -->
     <div class="btnEvent">
       <input type="button" onclick="window.location.href='/firebase.html';" class="btn btn-warning btn-lg" value="Click To Add Event"/>
@@ -61,9 +58,8 @@
     <br></br>
     
     <!-- TODO: Add option to translate the page? -->
-    <<<<<<< HEAD <div id="calendar" class="card my-3">
+      <div id="calendar" class="card my-3">
       </div>
-      =======
       <div id="calendar-container" class="container-fluid my-3">
         <div id="calendar" class="card">
           <!-- TODO: Add buttons to change month? Add option to change the view (monthly/weekly)?-->
