--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Eagle+Lake&display=swap" rel="stylesheet">
   <!-- Our CSS file -->
-  <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="./Assets/css/style.css" />
   <title> Carrot - Event Calendar </title>
 </head>
 
 <body>
   <header class="hero">
     <nav class="navbar">
-      <img src="assets/images/carrot.png" alt="Logo" class="d-inline-flex align-text-top">
+      <img src="Assets/images/carrot.png" alt="Logo" class="d-inline-flex align-text-top">
     </nav>
     <h1>Carrot</h1>
   </header>
@@ -77,8 +77,8 @@
     integrity="sha512-hcV6DX35BKgiTiWYrJgPbu3FxS6CsCjKgmrsPRpUPkXWbvPiKxvSVSdhWX0yXcPctOI2FJ4WP6N1zH+17B/sAA=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- Our JavaScript file -->
-  <script src="./assets/js/script.js"></script>
-  <script src="./assets/js/timezone.js"></script>
+  <script src="./Assets/js/script.js"></script>
+  <script src="./Assets/js/timezone.js"></script>
 </body>
 
 </html>
