--- a/index.html
+++ b/index.html
@@ -24,32 +24,31 @@
     <nav class="navbar">
       <img src="Assets/images/carrot.png" alt="Logo" class="d-inline-flex align-text-top">
     </nav>
+
+    <div class="timezone" id="timezone">
+      <p class="timeDisplay">EST: 8:00PM</p>
+    </div>
+
     <h1>Carrot</h1>
   </header>
-  
-  <div class="time-form">
-    <div class="form-floating">
-      <input type="time" class="form-control time-input" id="time">
-      <label for="time">Time for the event</label>
+
+  <div class="timeWidget">
+    <div class="time-form">
+      <div class="form-floating">
+        <input type="time" class="form-control time-input" id="time">
+        <label for="time">Time for the event</label>
+      </div>
+      <div class="form-floating">
+        <input type="text" class="form-control time-input" id="text">
+        <label for="text">Event Details</label>
+      </div>
+      <div class="input-group-append">
+        <button class="btn btn-outline-secondary" type="button">Submit &#129365</button>
+      </div>
     </div>
-    <div class="form-floating">
-      <input type="text" class="form-control time-input" id="text">
-      <label for="text">Text</label>
-    </div>
-    <div class="input-group-append">
-      <button class="btn btn-outline-secondary" type="button">Button</button>
-    </div>
-    <label>
-      Time Event
-    </label>
-    <input type="time" id="time-input" class="form-control" aria-label="Text input with dropdown button"> 
   </div>
 
   <main>
-
-    <div class="timezone" id="timezone">
-      <h3>EST: 8:00PM</h3>
-    </div>
 
  <div id="calendar" class="card my-3"></div>
 
