fixed the timezone api

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </nav>
 
     <div class="timezone" id="timezone">
-      <p class="timeDisplay">EST: 8:00PM</p>
+      <p class="timeDisplay" id="timeDisplay">EST: 8:00PM</p>
     </div>
 
     <h1>Carrot</h1>
