got console log showing events from database

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
     <div class="time-form">
       <div class="form-floating">
         <input type="time" class="form-control time-input" id="time">
-        <label for="time">Time for the event</label>
+        <label for="time">Local time for the event:</label>
+      </div>
+      <div class="form-floating">
+        <input type="alttime" class="form-control time-input" id="time">
+        <label for="alttime">Alternate time for the event:</label>
       </div>
       <div class="form-floating">
         <input type="text" class="form-control time-input" id="text">
