sidebar is now displaying today's event

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h1 class="display-3 mt-5">Carrot</h1>
     </a>
     <div class="timezone position-absolute top-0 end-0 mt-3 me-3" id="timezone">
-      <h2 class="fs-5 fw-lighter" id="timeDisplay">EST: 8:00PM</h2>
+      <h2 class="fs-5 fw-lighter" id="timeDisplay"></h2>
     </div>
   </header>
 
