--- a/index.html
+++ b/index.html
@@ -17,22 +17,23 @@
   <!-- Our CSS file -->
   <link rel="stylesheet" href="./Assets/css/style.css" />
   <title> Carrot - Event Calendar </title>
+  <link rel="apple-touch-icon" sizes="180x180" href="./Assets/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./Assets/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./Assets/favicon/favicon-16x16.png">
+  <link rel="manifest" href="./Assets/favicon/site.webmanifest">
 </head>
 
 <body>
 
-  <header class="pb-3 mb-4 border-bottom position-relative">
+  <header class="pb-3 mb-4 position-relative">
 
 
     <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
-      <img src="assets/images/carrot1.png" alt="Logo" width="230" height="200" class="me-2" viewBox="0 0 118 94">
-      <path fill-rule="evenodd" clip-rule="evenodd"
-        d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z"
-        fill="currentColor"></path>
+      <img src="assets/images/carrot.png" alt="Logo" width="230" height="200" class="me-2" viewBox="0 0 118 94">
       <h1 class="display-3 mt-5">Carrot</h1>
     </a>
 
-    <div class="timezone position-absolute top-0 end-0 mt-3 me-3" id="timezone">
+    <div class="timezone position-absolute top-0 end-0 mt-5 me-5" id="timezone">
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
           Timezone
@@ -46,7 +47,7 @@
         </ul>
       </li>
       <h2 class="fs-5 fw-lighter" id="timeDisplay"></h2>
-
+    </div>
       <!--Timezone bootstrap widget-->
 
   </header>
