updated timezone js

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
           Timezone
         </a>
-        <ul class="dropdown-menu"> <!--should i put the ids as the text input?-->
+        <ul class="dropdown-menu">
+          <!--should i put the ids as the text input?-->
           <li><a class="dropdown-item" id="inputEST" href="#" onclick="estFunction()">EST</a></li>
           <li><a class="dropdown-item" id="inputCST" href="#" onclick="cstFunction()">CST</a></li>
           <li><a class="dropdown-item" id="inputPST" href="#" onclick="pstFunction()">PST</a></li>
@@ -118,6 +119,7 @@
     <p> Made with &#129365 by Rabbits </p>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
   <!--Firebase-->
   <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-firestore.js"></script>
